src/objects/REVVY__MnQuoteItemAttribute__c.object
<CustomObject>
    <fields>
        <fullName>REVVY__ActualValue__c</fullName>
        <label>ActualValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__AttributeValue__c</fullName>
        <label>AttributeValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__CatalogAttribute__c</fullName>
        <label>CatalogAttribute</label>
        <referenceTo>REVVY__MnCatalogAttribute__c</referenceTo>
        <relationshipLabel>QuoteItemAttributes</relationshipLabel>
        <relationshipName>QuoteItemAttributes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>REVVY__IsComputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Computed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__QuoteItem__c</fullName>
        <label>QuoteItem</label>
        <referenceTo>REVVY__MnQuoteItem__c</referenceTo>
        <relationshipLabel>QuoteItemAttributes</relationshipLabel>
        <relationshipName>QuoteItemAttributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccQty__c</fullName>
        <label>ccQty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iaQty__c</fullName>
        <label>iaQty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>miscName__c</fullName>
        <label>miscName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>